# data-processing-workshop

./: .gitignore  data_processing.ipynb  data_processing_slides.odp  pyproject.toml  reuirements.txt
slides/: data_processing_slides.odp
