[project]
name = "data-processing-workshop"
version = "0.1.0"
description = ""
authors = [
    {name = "buz galbraith",email = "buzgalbraith@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
	'numpy',
	'pydicom',	
	'polars',
	'ipykernel',

]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
